--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,13 +1,11 @@
 {
-  "Language": "RU",
-  "MainPage": "Главная страница",
+  "NameLogo": "LIMARK",
   "MainLink": "Главная",
   "AboutLink": "О нас",
-  "SidebarToggleBt": "Меню",
-  "NotFoundPageText": " Страница не найдена",
-  "LIMARKDL": "LIMARKDL",
-  "PageErrorMessage": "Что-то пошло не так!",
-  "PageErrorApologizing": "Нам очень жаль за это неудобство. Попробуйте еще раз.",
-  "PageErrorTryAgain": "Обновить страницу",
-  "BugBt": "Крашнуть 💥"
+  "MainPage": "Главная страница",
+  "BugBt": "Краш",
+  "PageErrorMessage": "Что-то пошло не так",
+  "PageErrorApologizing": "Приносим извинения за причиненные неудобства",
+  "PageErrorTryAgain": "Перезагрузить страницу",
+  "SidebarToggleBt": ">>>"
 }
